2014-08-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Post-release 1.8.1

2014-08-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Prepare for release 1.8.1

2014-08-12  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	patch #8512 Rename tiny arch to avrtiny to sync with binutils
	* devtools/gen-avr-lib-tree.sh: AVRTINY10_DEV_INFO changed to
	AVRTINY_DEV_INFO.
	(AVR_ARH_INFO): Tiny arch name changed to avrtiny.
	* configure.ac: Tiny arch name changed to avrtiny.
	(AC_CONFIG_FILES): Change lib path for new architecture name.

2014-08-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #42957 missing SPMCSR defines in iom328p.h
	bug #41690 Bit definitions for SPMCSR
	* include/iom328p.h: fix SPMCSR names; add correct signature for
	ATmega328 device
	* include/avr/iom168p.h: fix SPMCSR names
	* include/avr/iom48p.h: (Dito.)
	* include/avr/iom88p.h: (Dito.)
	* include/avr/iom88pa.h: (Dito.)

2014-08-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #38614 dtostrf - wrong behavior or wrong documentation
	* include/stdlib.h (dtostrf): add "possible for the decimal dot

2014-08-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #39779 PCIE0 and PCIE1 defined incorrectly for mega165a and mega165pa devices
	* include/avr/iom165a.h: Create a separate IO header file for
	the ATmega165A (derived from ATmega165PA which has already been
	correct)
	* include/avr/io.h: Include iom165a.h
	* include/avr/Makefile.am: Add iom165a.h

2014-08-05  Senthil Kumar Selvaraj  <senthil_kumar.selvaraj@atmel.com>

	* include/avr/io1200.h: Add RAMSTART.
	* include/avr/io2313.h: Likewise.
	* include/avr/io2323.h: Likewise.
	* include/avr/io2333.h: Likewise.
	* include/avr/io2343.h: Likewise.
	* include/avr/io43u32x.h: Likewise.
	* include/avr/io43u35x.h: Likewise.
	* include/avr/io4414.h: Likewise.
	* include/avr/io4433.h: Likewise.
	* include/avr/io4434.h: Likewise.
	* include/avr/io76c711.h: Likewise.
	* include/avr/io8515.h: Likewise.
	* include/avr/io8534.h: Likewise.